[package]
name = "set-up-preact"
description = "Set up a Preact project so you can go ahead and code!"
homepage = "https://github.com/mybearworld/set-up-preact/#readme"
documentation = "https://github.com/mybearworld/set-up-preact/#readme"
repository = "https://github.com/mybearworld/set-up-preact"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["javascript", "preact"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "5.0.0"
